tests/invalid/include_next_outside.c
#include_next <foo.h>
int main() { return 0; }
